@@ -102,11 +102,6 @@ PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
                (Accept-Range: changeset in separate proposal below)
     +1: covener, wrowe, rpluem
 
-  * mod_proxy_ajp: Respect "reuse" flag in END_RESPONSE
-    Trunk patch: http://svn.apache.org/viewvc?rev=1152379&view=rev
-    2.2.x patch: http://people.apache.org/~rjung/patches/mod_proxy_ajp_reuse_flag.patch
-    +1: rjung, jim, jfclere
-
   * mod_proxy_ajp: Ignore flushing if headers have not been sent.
     Trunk patch: http://svn.apache.org/viewvc?rev=1153531&view=rev
     2.2.x patch: http://people.apache.org/~rpluem/patches/51608.diff
